--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /*sessão logo,menu,barra de pesquisa*/
-body, ul{
+body, ul {
     margin: 0px;
     padding: 0px;
+    
  }
- 
+
  a {
      color: black;
      text-decoration: none;
@@ -18,7 +19,6 @@ body, ul{
      font-weight: bold;
  }
  #header {
-     max-width: 1349px; 
      box-sizing: border-box;
      height: 70px;
      padding: 1rem;
@@ -26,9 +26,9 @@ body, ul{
      align-items: center;
      justify-content: space-between;
      background: #6C95BA;
- 
+    
  }
- 
+
  #menu {
     display: flex;
     list-style: none;
@@ -42,9 +42,8 @@ body, ul{
  #btn-mobile {
      display: none;
  }
- 
- @media screen and (max-width:600px){
- 
+ /* responsividade menu*/
+  @media  (max-width:600px) { 
      #menu {
        display: block;
        position: absolute;
@@ -99,13 +98,17 @@ body, ul{
      }
      #nav.active #hamburger::before {
          transform: rotate(135deg);
+        
      }
      #nav.active #hamburger::after {
          transform: rotate(-135deg);
          top: -7px;
- 
+    
      }
+     /*final da responsividade do menu*/
+    
  }
+ 
 /*sessão novidades*/
 .barra1 {
     background-color:#6C95BA;
@@ -355,7 +358,7 @@ center .content .text{
 }
 
 /*responsividade roda pé*/
-@media screen and (max-width:900px){
+@media screen and (max-width:600px){
     footer{
         position: relative;
         bottom: 0px;
@@ -448,7 +451,6 @@ center .content .text{
     } 
     
 }
-
 
 /*sessão jogos ps5*/
 .img-fluid{
@@ -580,6 +582,7 @@ center .content .text{
 /*sessão galeria */
 .galeria-1{
     background-color: #E5E5E5;
+    
 }
 .gl{
     max-width: 100%;
